syntax = "proto3";
package dymensionxyz.dymension.eibc;

import "gogoproto/gogo.proto";
import "dymension/common/status.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/eibc/types";

message DemandOrder {
    // id is a hash of the form generated by GetRollappPacketKey, 
    // e.g status/rollappid/packetProofHeight/packetDestinationChannel-PacketSequence which gurantees uniqueness
    string id = 1;
    // tracking_packet_key is the key of the packet that is being tracked. 
    // This key can change depends on the packet status.
    string tracking_packet_key = 2;
    repeated cosmos.base.v1beta1.Coin price = 3 [
      (gogoproto.nullable) = false,
      (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
    ];
    repeated cosmos.base.v1beta1.Coin fee = 4 [
      (gogoproto.nullable) = false,
      (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
    ];
    string recipient = 5;
    bool is_fullfilled = 6;
    dymensionxyz.dymension.common.Status tracking_packet_status = 8;
  }