syntax = "proto3";
package dymensionxyz.dymension.forward;

message ForwardHook {
  // TODO:
  string foo = 1;
  int64 bar = 2;
}
